# Veritas-RAG

./: .gitignore  BENCHMARK_RESULTS.md  FAST_BENCHMARKING.md  MANIFEST.in  Makefile  Product_strategy.md  QUALITY_BENCHMARK_ANALYSIS.md  README.md  pyproject.toml
examples/: basic_usage.py  benchmark_example.py
src/benchmarks/: latency.py
src/veritas_rag/: __init__.py
src/veritas_rag/benchmarks/: __init__.py  latency.py  portability.py  quality.py  reporting.py  stat_card.py  synth_corpus.py
src/veritas_rag/benchmarks/data/: eval_set_v1.jsonl
src/veritas_rag/cli/: __init__.py  benchmark.py  main.py
src/veritas_rag/core/: __init__.py  contracts.py  ids.py
src/veritas_rag/ingestion/: __init__.py  chunker.py  normalizer.py  parsers.py
src/veritas_rag/rag/: __init__.py  context.py
src/veritas_rag/search/: __init__.py  bm25_index.py  query.py  retrieval.py  tokenizer.py
src/veritas_rag/storage/: __init__.py  chunk_store.py  compression.py  manifest.py
tests/: __init__.py
tests/integration/: __init__.py  test_bench_run.py  test_build_and_query.py  test_packaging_data_access.py
tests/unit/: __init__.py  test_chunk_offsets_match_text.py  test_chunk_store_format.py  test_cli_score_normalization.py  test_ids.py
