[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "veritas-rag"
version = "0.1.0"
description = "Local-first RAG memory engine with sparse retrieval (BM25) and compressed binary chunk store"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = {text = "MIT"}
authors = [
    {name = "Veritas RAG Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "pymupdf>=1.23.0",
    "zstandard>=0.21.0",
    "xxhash>=3.2.0",
    "rank-bm25>=0.2.2",
    "numpy>=1.24.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-benchmark>=4.0.0",
    "mypy>=1.5.0",
    "black>=23.7.0",
    "ruff>=0.0.280",
]

[project.scripts]
veritas-rag = "veritas_rag.cli.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"veritas_rag.benchmarks" = ["data/*.jsonl", "data/*.json", "data/*.txt"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
